--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Point of Sales</string>
+    <string name="app_name">Admin POS</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="title_select_image_from_gallery">Chọn ảnh từ thư viện</string>
@@ -30,6 +30,7 @@
     <string name="title_sns_code_forgot_password">Chúng tôi sẽ gửi cho bạn mã để xác nhận tài khoản này là của bạn</string>
     <string name="login_password">Mật khẩu</string>
     <string name="lb_wellcome_app">Wellcome to APP</string>
+    <string name="msg_token_fmt">Notification App</string>
 
     <string name="description">Cầu thủ Nghệ An nói chung, Quế Ngọc Hải nói riêng luôn thi đấu với tinh thần máu lửa, đôi khi tới mức thô bạo. Thứ tinh thần đó trở thành bản sắc rất riêng. Song, từ ngày về Viettel, trung vệ sinh năm 1993 đang dần đánh mất thứ vũ khí quan trọng này.</string>
 
