--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Store 35</string>
+    <string name="app_name">taphoa35</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="title_select_image_from_gallery">Chọn ảnh từ thư viện</string>
